Modifications for DB history
Former-commit-id: fb2a6ac313d728be94af39344b59201d4b7f1653